# TrafoCalc

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  codeql-analysis.yml  mutation-testing.yml
data/: 10MVA_example.json  1250kVA_sc_transformer.json  31_5_MVA_example.json  6300_kVA_example.json  630kVA_sc_transformer.json
notes/: 10 MVA Transformer Design.ipynb  1250_kVA_sc_transformer.ipynb  31_5_MVA_transformer.ipynb  6300kVA_transformer.ipynb  630_kVA_sc_transformer.ipynb  630_kVA_transformer.ipynb  optimization.py  plots.py  sc_plots.py  sc_transformer_optimization.py
src/: analytical_flux.py  base_functions.py  basic_functions.py  basic_model.py  conv_transformer_optimization.py  diagrams.py  force_calculations.py  model.py  models.py  simulation.py  superconductor_losses.py  tr_opt.py  trafo_opt_conventional.py  transformer_calculations.py  transformer_calculatoins.py  transformer_fem_model.py  two_winding_model.py
src/data/: tr_6300kVA.json
tests/: test_basic_functions.py  test_basic_model.py  test_conv_transformer_optimization.py  test_diagrams.py  test_models.py  test_superconductor_losses.py  test_transformer_calculations.py  test_transformer_fem_model.py  test_two_winding_model.py  test_utils.py
